# axiom-microsim

./: .gitignore  DECISIONS.md  DEPLOY.md  PERFORMANCE.md  README.md  modal_app.py  pyproject.toml
.github/workflows/: ci.yml
axiom_microsim/: __init__.py  cli.py  server.py
axiom_microsim/aggregate/: cost.py  distribution.py  reform.py
axiom_microsim/data/: ecps_loader.py  populace_loader.py
axiom_microsim/project/: co_snap.py  federal_ctc.py  federal_income_tax.py
axiom_microsim/run/: microsim.py
engine/: axiom-rules-engine  rules-us  rules-us-co
engine/artifacts/: co-snap-base.json
scripts/: compute_pe_one.py  profile_run.py  refresh_pe_comparison.py  setup_engine.sh
tests/: test_app_v2_outputs.py  test_loader_and_projection.py  test_policyengine_compare_outputs.py  test_populace_loader.py
web/: .env.example  package-lock.json  package.json  tailwind.config.ts  vercel.json
web/public/: comparison.json
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/api/compare/: route.ts
web/src/app/api/ecps-stats/: route.ts
web/src/app/api/microsim/: route.ts
web/src/app/methodology/: page.tsx
web/src/components/: DecileChart.tsx  DecileImpactChart.tsx  MethodologyEcpsPanel.tsx  MethodologyPeSection.tsx  Nav.tsx  StatCard.tsx  WinnersLosers.tsx
web/src/lib/: format.ts  levers.ts  methodology.ts  types.ts
